View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028401 | Open CASCADE | OCCT:Configuration | public | 2017-01-27 18:15 | 2017-09-29 16:24 |
Reporter | vsv | Assigned To | apn | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Product Version | 7.2.0 | ||||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028401: Configuration - unresolved symbol OpenGl_VertexBuffer::unbindFixedColor() | ||||
Description | On link with OpenGl library a linker reports error: unresolved external symbol "private: static void __cdecl OpenGl_VertexBuffer::unbindFixedColor(class opencascade::handle<class OpenGl_Context> const &) It is appeared because the non-exported unbindFixedColor is called from a public inline method unbindAttribute. | ||||
Steps To Reproduce | •Reference to issue in bug tracker of another project | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR28401 has been created by vsv. SHA-1: 140daa7ff7348001379deb6f9fb2e816b0c7818c Detailed log of new commits: Author: vsv Date: Fri Jan 27 18:22:40 2017 +0300 0028401: Unresolved symbol on OpenGl_VertexBuffer using |
|
Please correct your mail in git settings and modify commit message following recommended style (I have edited bug title). |
|
Branch CR28401 has been updated by vsv. SHA-1: efa59fda7b8f3b1354757c143e4d79bedffb101a Detailed log of new commits: Author: vsv Date: Mon Jan 30 12:05:12 2017 +0300 0028401: Configuration - unresolved symbol OpenGl_VertexBuffer::unbindFixedColor() Author: vsv Date: Mon Jan 30 12:00:02 2017 +0300 Revert "0028401: Unresolved symbol on OpenGl_VertexBuffer using" This reverts commit 140daa7ff7348001379deb6f9fb2e816b0c7818c. |
|
The branch in currents state consists of 3 commits. This contradicts to recommended bug advancement workflow. |
|
Branch CR28401 has been deleted by vsv. SHA-1: efa59fda7b8f3b1354757c143e4d79bedffb101a |
|
Branch CR28401 has been created by vsv. SHA-1: 30064881bd125b979eaa7c301124ee47f17053fe Detailed log of new commits: Author: vsv Date: Mon Jan 30 16:05:19 2017 +0300 0028401: Configuration - unresolved symbol OpenGl_VertexBuffer::unbindFixedColor() |
|
Please just check compilation, regression testing is not needed. |
|
Dear BugMaster, Branch CR28401 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: 30064881bd125b979eaa7c301124ee47f17053fe Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 63 (63 on master) Windows: 0 (0 on master) MacOS : 1143 |
|
Dear BugMaster, Branch CR28401 is TESTED. |
|
Branch CR28401 has been deleted by kgv. SHA-1: 30064881bd125b979eaa7c301124ee47f17053fe |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-01-27 18:15 | vsv | New Issue | |
2017-01-27 18:15 | vsv | Assigned To | => kgv |
2017-01-27 18:23 | git | Note Added: 0063149 | |
2017-01-27 18:23 | vsv | Assigned To | kgv => vsv |
2017-01-27 18:24 | vsv | Assigned To | vsv => kgv |
2017-01-27 18:24 | vsv | Status | new => resolved |
2017-01-27 18:24 | vsv | Steps to Reproduce Updated | |
2017-01-27 18:31 | kgv | Note Added: 0063153 | |
2017-01-27 18:31 | kgv | Assigned To | kgv => vsv |
2017-01-27 18:31 | kgv | Status | resolved => assigned |
2017-01-27 18:31 | kgv | Category | OCCT:Visualization => OCCT:Configuration |
2017-01-27 18:31 | kgv | Summary | Unresolved symbol on OpenGl_VertexBuffer using => Configuration - unresolved symbol OpenGl_VertexBuffer::unbindFixedColor() |
2017-01-30 12:05 | git | Note Added: 0063182 | |
2017-01-30 12:07 | vsv | Assigned To | vsv => bugmaster |
2017-01-30 12:07 | vsv | Status | assigned => resolved |
2017-01-30 12:14 | kgv | Note Added: 0063183 | |
2017-01-30 12:14 | kgv | Assigned To | bugmaster => vsv |
2017-01-30 12:14 | kgv | Status | resolved => assigned |
2017-01-30 15:52 | git | Note Added: 0063195 | |
2017-01-30 16:05 | git | Note Added: 0063201 | |
2017-01-30 16:10 | vsv | Assigned To | vsv => san |
2017-01-30 16:10 | vsv | Assigned To | san => bugmaster |
2017-01-30 16:10 | vsv | Status | assigned => resolved |
2017-01-30 16:10 | vsv | Assigned To | bugmaster => san |
2017-01-30 16:39 | kgv | Note Added: 0063204 | |
2017-01-30 16:39 | kgv | Assigned To | san => bugmaster |
2017-01-30 16:39 | kgv | Severity | minor => trivial |
2017-01-30 16:39 | kgv | Status | resolved => reviewed |
2017-01-30 17:21 |
|
Assigned To | bugmaster => mkv |
2017-01-30 20:00 |
|
Note Added: 0063224 | |
2017-01-30 20:00 |
|
Note Added: 0063225 | |
2017-01-30 20:00 |
|
Assigned To | mkv => bugmaster |
2017-01-30 20:00 |
|
Status | reviewed => tested |
2017-01-30 20:00 |
|
Test case number | => Not needed |
2017-02-03 16:52 | apn | Changeset attached | => occt master f114566d |
2017-02-03 16:52 | apn | Assigned To | bugmaster => apn |
2017-02-03 16:52 | apn | Status | tested => verified |
2017-02-03 16:52 | apn | Resolution | open => fixed |
2017-02-08 11:36 | git | Note Added: 0063631 | |
2017-09-29 16:21 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:24 |
|
Status | verified => closed |